
Mon Jun 5 14:14:10 EDT 1995	Paul Park	(pjpark@mit.edu)
	* srv_key.c(key_get_admin_entry) - When adding database entry for
		changepw principal, supply a maximum life and maximum renewable
		lifetime so that it doesn't end up being zero.


Thu Jun 1 14:34:41 EDT 1995	Paul Park	(pjpark@mit.edu)
	* srv_acl.c: Change default acl file name to be a #define.  If it
		is not defined, then default to /krb5/krb5_adm.acl.
	* srv_key.c: Add logic to retrieve or create the database entry for
		the password changing service.  Subsequently, squirrel away
		the key so that we do not need a srvtab.
	* proto_serv.c: If no srvtab is specified, then use the squirreled
		admin key so that we can live without a srvtab.
	* kadm5_defs.h: Add prototype for admin key routine.
	* Makefile.in: Set the default acl file to be $(KRB5ROOT)/krb5_adm.acl.
	* kadmind5.M: Add description of missing flags.  Removed file names.

Sun May 28 15:58:15 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* srv_main.c (main): Use exit instead of return from
		main. Otherwise may return to a signal interrupt on
		shutdown. 
		On shutdown - do not output message as stdout may
		be closed on receivers end. 

Fri May 26 17:50:13 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in	- Add KDBLIB to dependency list.


Mon May 22 09:46:53 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in	- Install kadmind5 in $(SERVER_BINDIR), install
			  manpage in $(SERVER_MANDIR).
	* kadmind5.M	- Change section to section 8.


Tue May 16 10:31:12 EDT 1995	Paul Park	(pjpark@mit.edu)
	* proto_serv.c	- Don't destroy the replay cache when done.


Fri May 12 16:06:24 EDT 1995	Paul Park	(pjpark@mit.edu)
	* admin.c	- Change for Ultrix: howmany->how_many because howmany
			  is a macro used to count how many elements in an
			  array.
	* kadm5_defs.h, srv_net.c
			- Use DEBUG_NOSLAVES to determine when to create a
			  new slave for handling connections.  Also, change
			  max slaves to 2*SOMAXCONN and reduce sleep wait to
			  2 seconds.